--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -559,5 +559,6 @@
     <string name="book_type_text">文本</string>
     <string name="book_type_audio">音频</string>
     <string name="to_backstage">转到后台</string>
+    <string name="importing">正在导入</string>
 
 </resources>
