--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -557,5 +557,8 @@
     <string name="to_backstage">转到后台</string>
     <string name="importing">正在导入</string>
     <string name="custom_page_key">定义翻页按键</string>
+    <string name="custom_page_key_t">自定义翻页按键</string>
+    <string name="prev_page_key">上一页按键</string>
+    <string name="next_page_key">下一页按键</string>
 
 </resources>
