--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -382,8 +382,8 @@
     <string name="rule_chapter_list">目录列表规则(chapterList)</string>
     <string name="rule_chapter_name">章节名称规则(ChapterName)</string>
     <string name="rule_chapter_url">章节URL规则(chapterUrl)</string>
-    <string name="rule_is_vip">是否VIP(isVip)</string>
-    <string name="rule_update_time">更新时间(updateTime)</string>
+    <string name="rule_is_vip">VIP标识(isVip)</string>
+    <string name="rule_update_time">章节信息(ChapterInfo)</string>
     <string name="rule_book_content">正文规则(content)</string>
     <string name="rule_next_content">正文下一页URL规则(nextContentUrl)</string>
     <string name="rule_web_js">webJs</string>
