--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,9 @@
     <string name="book_source_manage">书源管理</string>
     <string name="setting">设置</string>
     <string name="theme_setting">主题设置</string>
+    <string name="theme_setting_s">与界面/颜色相关的一些设置</string>
+    <string name="other_setting">其它设置</string>
+    <string name="other_setting_s">与功能相关的一些设置</string>
     <string name="about">关于</string>
     <string name="donate">捐赠</string>
     <string name="exit">退出</string>
