--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -565,5 +565,7 @@
     <string name="custom_page_key">自定义翻页按键</string>
     <string name="prev_page_key">上一页按键</string>
     <string name="next_page_key">下一页按键</string>
+    <string name="after_add_bookshelf">先将书籍加入书架</string>
+    <string name="no_group">未分组</string>
 
 </resources>
