--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -444,8 +444,7 @@
     <string name="find">发现</string>
     <string name="switch_display_style">切换显示样式</string>
     <string name="import_per">导入本地书籍需存储权限</string>
-    <string name="click_to_day">点击可切换到白天模式</string>
-    <string name="click_to_night">点击可切换到夜间模式</string>
+    <string name="night_theme">夜间模式</string>
     <string name="get_storage_per">本软件需要存储权限来存储备份书籍信息</string>
     <string name="double_click_exit">再按一次退出程序</string>
     <string name="import_book_per">导入本地书籍需存储权限</string>
