--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -582,5 +582,7 @@
     <string name="text_too_long_qr_error">文字太多,生成二维码失败</string>
     <string name="share_rss_source">分享RSS源</string>
     <string name="share_book_source">分享书源</string>
+    <string name="auto_dark_mode">自动切换夜间模式</string>
+    <string name="auto_dark_mode_s">夜间模式跟随系统</string>
 
 </resources>
