--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -586,5 +586,6 @@
     <string name="share_book_source">分享书源</string>
     <string name="auto_dark_mode">自动切换夜间模式</string>
     <string name="auto_dark_mode_s">夜间模式跟随系统</string>
+    <string name="go_back">上级</string>
 
 </resources>
