--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -541,6 +541,7 @@
     <string name="group_manage">分组管理</string>
     <string name="group_select">分组选择</string>
     <string name="group_edit">编辑分组</string>
+    <string name="move_to_group">移入分组</string>
     <string name="add_group">添加分组</string>
     <string name="add_replace_rule">新建替换</string>
     <string name="group">分组</string>
