--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -594,5 +594,6 @@
     <string name="go_back">上级</string>
     <string name="tone_colour">在线朗读音色</string>
     <string name="select_count">(%d/%d)</string>
+    <string name="show_rss">显示订阅</string>
 
 </resources>
