--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -530,8 +530,6 @@
     <string name="change_icon_summary">切换软件显示在桌面的图标</string>
     <string name="help">帮助</string>
     <string name="my">我的</string>
-    <string name="dsm_start"><![CDATA[<]]></string>
-    <string name="dsm_end"><![CDATA[>]]></string>
     <string name="reading">阅读</string>
     <string name="battery_show">%d%%</string>
     <string name="timer_m">%d分钟</string>
@@ -603,5 +601,8 @@
     <string name="sys_folder_picker">系统文件夹选择器</string>
     <string name="app_folder_picker">自带选择器\n(Android10以上因权限限制可能无法使用)</string>
     <string name="a10_permission_toast">Android10以上因权限限制可能无法读写文件</string>
+    <string name="add_to_text_context_menu_s">长按文字在操作菜单中显示阅读·搜索</string>
+    <string name="add_to_text_context_menu_t">文字操作显示搜索</string>
+    <string name="record_log">记录日志</string>
 
 </resources>
