--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
 
     <string name="dynamic_click_retry">点击重试</string>
     <string name="dynamic_loading">正在加载</string>
-
+    <string name="draw">提醒</string>
     <string name="edit">编辑</string>
     <string name="delete">删除</string>
     <string name="replace">替换</string>
