--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -605,5 +605,5 @@
     <string name="add_to_text_context_menu_s">长按文字在操作菜单中显示阅读·搜索</string>
     <string name="add_to_text_context_menu_t">文字操作显示搜索</string>
     <string name="record_log">记录日志</string>
-    <string name="is_chinese_converter_enable">中文简繁体转换</string>
+    <string name="chinese_converter">中文简繁体转换</string>
 </resources>
