--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -608,4 +608,5 @@
     <string name="chinese_converter">中文简繁体转换</string>
     <string name="chage_icon_error">图标为矢量图标,Android8.0以前不支持</string>
     <string name="aloud_config">朗读设置</string>
+    <string name="main_activity">主界面</string>
 </resources>
