--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -554,6 +554,7 @@
     <string name="enable_selection">启用所选</string>
     <string name="disable_selection">禁用所选</string>
     <string name="export_selection">导出所选</string>
+    <string name="export">导出</string>
     <string name="load_toc">加载目录</string>
     <string name="tts">TTS</string>
     <string name="web_dav_pw_s">输入你的WebDav授权密码</string>
