--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -617,4 +617,6 @@
     <string name="footer">页角</string>
     <string name="select_end">文本选择结束位置</string>
     <string name="select_start">文本选择开始位置</string>
+    <string name="share_layout">共用布局</string>
+    <string name="title_center">标题居中</string>
 </resources>
