--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -619,4 +619,5 @@
     <string name="select_start">文本选择开始位置</string>
     <string name="share_layout">共用布局</string>
     <string name="title_center">标题居中</string>
+    <string name="browser">浏览器</string>
 </resources>
