--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -621,4 +621,9 @@
     <string name="title_center">标题居中</string>
     <string name="browser">浏览器</string>
     <string name="import_default_rule">导入默认规则</string>
+    <string name="name">名称</string>
+    <string name="regex">正则</string>
+    <string name="more_menu">更多菜单</string>
+    <string name="reduce">减</string>
+    <string name="plus">加</string>
 </resources>
