功能添加: 选择默认字体时, 可选择字体默认字体(非衬线), 系统衬线字体, 系统等宽字体
Android 10 开始, 谷歌给安卓提供了思源宋体作为中日韩三文的衬线字体, 或者有些手机可以自行更改, 并且加载系统内置字体性能也更佳

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -627,4 +627,5 @@
     <string name="reduce">减</string>
     <string name="plus">加</string>
     <string name="other_aloud_setting">其它朗读设置</string>
+    <string name="system_typeface">系统内置字体样式</string>
 </resources>
