--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,12 +47,13 @@
     <string name="bookshelf_empty">书架还空着，先去添加吧！</string>
     <string name="action_search">搜索</string>
     <string name="action_download">下载</string>
-    <string name="layout_list">列表视图</string>
-    <string name="layout_grid3">网格视图三列</string>
-    <string name="layout_grid4">网格视图四列</string>
-    <string name="layout_grid5">网格视图五列</string>
-    <string name="layout_grid6">网格视图六列</string>
+    <string name="layout_list">列表</string>
+    <string name="layout_grid3">网格三列</string>
+    <string name="layout_grid4">网格四列</string>
+    <string name="layout_grid5">网格五列</string>
+    <string name="layout_grid6">网格六列</string>
     <string name="bookshelf_layout">书架布局</string>
+    <string name="view">视图</string>
     <string name="book_library">书城</string>
     <string name="book_local">添加本地</string>
     <string name="book_source">书源</string>
@@ -226,11 +227,11 @@
     <string name="origin_show">来源:%s</string>
     <string name="import_replace_rule">本地导入</string>
     <string name="import_replace_rule_on_line">网络导入</string>
-    <string name="bookshelf_px">书架排序</string>
     <string name="check_update_interval">检查更新间隔</string>
-    <string name="bookshelf_px_0">按阅读时间排序</string>
-    <string name="bookshelf_px_1">按更新时间排序</string>
-    <string name="bookshelf_px_2">手动排序</string>
+    <string name="bookshelf_px_0">按阅读时间</string>
+    <string name="bookshelf_px_1">按更新时间</string>
+    <string name="bookshelf_px_2">按书名</string>
+    <string name="bookshelf_px_3">手动排序</string>
     <string name="read_type">阅读方式</string>
     <string name="del_select">删除所选</string>
     <string name="del_msg">是否确认删除?</string>
