--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,7 +193,7 @@
     <string name="img_cover">封面</string>
     <string name="book">书</string>
     <string name="volume_key_page">音量键翻页</string>
-    <string name="click_open_page">点击翻页</string>
+    <string name="click_turn_page">点击翻页</string>
     <string name="click_all_next_page">点击总是翻下一页</string>
     <string name="page_anim">翻页动画</string>
     <string name="keep_light">屏幕超时</string>
