--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,6 +234,7 @@
     <string name="bookshelf_px_2">按书名</string>
     <string name="bookshelf_px_3">手动排序</string>
     <string name="read_type">阅读方式</string>
+    <string name="compose_type">排版</string>
     <string name="del_select">删除所选</string>
     <string name="del_msg">是否确认删除?</string>
     <string name="clear_font">默认字体</string>
@@ -630,4 +631,7 @@
     <string name="other_aloud_setting">其它朗读设置</string>
     <string name="system_typeface">系统内置字体样式</string>
     <string name="sure_delete_book_file">是否删除源文件</string>
+    <string name="default1">预设一</string>
+    <string name="default2">预设二</string>
+    <string name="default3">预设三</string>
 </resources>
