--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -638,4 +638,5 @@
     <string name="title_left">靠左</string>
     <string name="title_center">居中</string>
     <string name="title_hide">隐藏</string>
+    <string name="add_to_group">加入分组</string>
 </resources>
