--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <!--App-->
     <string name="app_name">欣阅</string>
     <string name="receiving_shared_label">欣阅·搜索</string>
+    <string name="tip_perm_request_storage">欣阅需要访问存储卡权限，请前往“设置”—“应用权限”—打开所需权限</string>
 
     <!--Other-->
     <string name="menu_backup">Home</string>
@@ -15,9 +16,7 @@
     <string name="dialog_cancel">取消</string>
     <string name="dialog_confirm">确定</string>
     <string name="dialog_setting">去设置</string>
-
     <string name="tip_cannot_jump_setting_page">无法跳转至设置界面</string>
-    <string name="tip_perm_request_storage">悦读需要访问存储卡权限，请前往“设置”—“应用权限”—打开所需权限</string>
 
     <string name="dynamic_click_retry">点击重试</string>
     <string name="dynamic_loading">正在加载</string>
