--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -88,7 +88,7 @@
     <string name="download_offline_s">下載已選擇的章節到本地</string>
     <string name="change_origin">換源</string>
     <string name="about_description">
-        \u3000\u3000這是一款使用 Kotlin 全新開發的開源的閲讀應用程式，歡迎你的加入。關注公眾號[开源阅读软件]！
+        \u3000\u3000這是一款使用 Kotlin 全新開發的開源的閲讀應用程式，歡迎你的加入。關注公眾號[开源阅读]！
     </string>
     <string name="app_share_description">
         閲讀3.0下載地址：\nhttps://play.google.com/store/apps/details?id=io.legado.app
@@ -664,7 +664,7 @@
     <string name="follow_official_account">關注公衆號</string>
     <string name="wechat">WeChat</string>
     <string name="thanks">你的支持是我更新的動力</string>
-    <string name="about_official_account">公众号[开源阅读软件]</string>
+    <string name="about_official_account">公众号[开源阅读]</string>
     <string name="source_auto_changing">正在自動換源</string>
     <string name="click_to_apply">點擊加入</string>
     <string name="middle">中</string>
@@ -685,4 +685,7 @@
     <string name="night_accent">夜間，強調色</string>
     <string name="night_background_color">夜間，背景色</string>
     <string name="night_navbar_color">夜間，導航欄顏色</string>
+    <string name="hideHeader">隐藏页眉</string>
+    <string name="hideFooter">隐藏页脚</string>
+    <string name="auto_change_source">自动换源</string>
 </resources>
