--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -417,7 +417,7 @@
     <string name="r_description">描述规则(ruleDescription)</string>
     <string name="r_image">图片url规则(ruleImage)</string>
     <string name="r_content">内容规则(ruleContent)</string>
-    <string name="r_style">样式</string>
+    <string name="r_style">样式(style)</string>
     <string name="r_link">链接规则(ruleLink)</string>
     <!-- source end-->
 
