--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -689,4 +689,5 @@
     <string name="hideHeader">隱藏頁眉</string>
     <string name="hideFooter">隱藏頁脚</string>
     <string name="auto_change_source">自動換源</string>
+    <string name="to_bottom">置底</string>
 </resources>
